--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/pexels-hitesh-choudhary-879109.jpg" class="d-block w-100" alt="...">
+        <img src="pexels-hitesh-choudhary-879109.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Think twice CODE once</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="images/pexels-olia-danilevich-4974915.jpg" class="d-block w-100" alt="...">
+        <img src="pexels-olia-danilevich-4974915.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>sleep-eat-code-repeat</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="images/pexels-thisisengineering-3861972.jpg" class="d-block w-100" alt="...">
+        <img src="pexels-thisisengineering-3861972.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -136,7 +136,7 @@
     <hr>
     <div class="row justify-content-evenly pt-2 pb-3">
       <div class="col-md-5 pt-4">
-        <img src="images/growth.jpg" alt="" class="img-fluid">
+        <img src="growth.jpg" alt="" class="img-fluid">
       </div>
       <div class="col-md-5 pt-4">
         <h5 class="mt-3">Web Development</h5>
